policies/check-imagepullpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-imagepullpolicy
spec:
  validationFailureAction: enforce  # audit or enforce
  rules:
  - name: check-imagepullpolicy
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Image pull policy must be Always"
      pattern:
        spec:
          containers:
          - imagePullPolicy: Always
